Finish search dapp screen

--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -211,6 +211,14 @@
             app:popExitAnim="@anim/fragment_close_exit"
             android:id="@+id/action_mainFragment_to_dappBrowserGraph"
             app:destination="@id/dapp_browser_graph" />
+
+        <action
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit"
+            android:id="@+id/action_mainFragment_to_dappSearchGraph"
+            app:destination="@id/dapp_search_graph" />
     </fragment>
 
 
@@ -894,5 +902,5 @@
 
     <include app:graph="@navigation/dapp_browser_graph" />
 
-
+    <include app:graph="@navigation/dapp_search_graph" />
 </navigation>
