--- a/common/src/main/res/values/colors.xml
+++ b/common/src/main/res/values/colors.xml
@@ -49,7 +49,7 @@
 
     <color name="red">#FF285C</color>
 
-    <color name="top_bar_dapps">#A3252528</color>
+    <color name="bar_bg_64">#A8252528</color>
 
     <color name="accentBlue">#409DF3</color>
 
