--- a/common/src/main/res/values/themes.xml
+++ b/common/src/main/res/values/themes.xml
@@ -42,6 +42,8 @@
 
         <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
 
+        <item name="editTextStyle">@style/Widget.Nova.Input.EditText</item>
+
         <item name="bottomSheetDialogTheme">@style/BottomSheetDialog</item>
     </style>
 
