--- a/feature-dapp-impl/src/main/res/layout/item_dapp.xml
+++ b/feature-dapp-impl/src/main/res/layout/item_dapp.xml
@@ -28,12 +28,16 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:includeFontPadding="false"
-        android:layout_marginTop="12dp"
+        android:singleLine="true"
+        android:ellipsize="end"
         android:layout_marginEnd="16dp"
+        android:includeFontPadding="false"
+        app:layout_constraintBottom_toTopOf="@+id/itemDAppSubtitle"
         app:layout_constraintEnd_toStartOf="@+id/imageView2"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@id/itemDAppIcon"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/itemDAppIcon"
+        app:layout_constraintVertical_chainStyle="packed"
         tools:text="Astar" />
 
     <TextView
@@ -44,12 +48,12 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="2dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="14dp"
         android:textColor="@color/white_64"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/itemDAppIcon"
         app:layout_constraintEnd_toStartOf="@+id/imageView2"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@id/itemDAppIcon"
-        app:layout_constraintTop_toBottomOf="@id/itemDAppTitle"
+        app:layout_constraintTop_toBottomOf="@+id/itemDAppTitle"
         tools:text="Staking" />
 
     <ImageView
