--- a/feature-dapp-impl/src/main/res/layout/fragment_dapp_main.xml
+++ b/feature-dapp-impl/src/main/res/layout/fragment_dapp_main.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/dappMainContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -89,6 +89,18 @@
             app:layout_constraintStart_toStartOf="@id/dappMainWelcomeSubtitle"
             app:layout_constraintTop_toBottomOf="@+id/dappMainWelcomeSubtitle" />
 
+        <io.novafoundation.nova.feature_dapp_impl.presentation.main.view.TapToSearchView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:id="@+id/dappMainSearch"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="12dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/dappMainWelcomeGroup" />
+
+
         <io.novafoundation.nova.feature_dapp_impl.presentation.main.view.CategorizedDappsView
             android:id="@+id/dappMainCategorizedDapps"
             android:layout_width="0dp"
@@ -100,7 +112,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/dappMainWelcomeGroup" />
+            app:layout_constraintTop_toBottomOf="@id/dappMainSearch" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
