--- a/feature-dapp-impl/src/main/res/layout/fragment_dapp_browser.xml
+++ b/feature-dapp-impl/src/main/res/layout/fragment_dapp_browser.xml
@@ -42,7 +42,7 @@
         android:id="@+id/dappBrowserWebView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/dappBrowserBottomBarTopMargin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/dappBrowserAddressBarGroup" />
