--- a/feature-dapp-impl/src/main/res/layout/fragment_dapp_browser.xml
+++ b/feature-dapp-impl/src/main/res/layout/fragment_dapp_browser.xml
@@ -42,13 +42,13 @@
         android:id="@+id/dappBrowserWebView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/dappBrowserBottomBarTopMargin"
+        app:layout_constraintBottom_toTopOf="@+id/dappBrowserBottomNavigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/dappBrowserAddressBarGroup" />
 
     <View
-        android:id="@+id/view"
+        android:id="@+id/dappBrowserBottomNavigation"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="-11dp"
