--- a/app/src/main/res/layout/activity_root.xml
+++ b/app/src/main/res/layout/activity_root.xml
@@ -8,7 +8,7 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/navHost"
-        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:name="io.novafoundation.nova.app.root.navigation.NovaNavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:navGraph="@navigation/root_nav_graph"
