--- a/app/src/main/res/navigation/dapp_browser_graph.xml
+++ b/app/src/main/res/navigation/dapp_browser_graph.xml
@@ -14,6 +14,14 @@
         <action
             android:id="@+id/action_DAppBrowserFragment_to_ConfirmSignExtrinsicFragment"
             app:destination="@id/ConfirmSignExtrinsicFragment" />
+
+        <action
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit"
+            android:id="@+id/action_DAppBrowserFragment_to_dappSearchFragment"
+            app:destination="@id/dappSearchFragment" />
     </fragment>
 
     <dialog
@@ -31,4 +39,11 @@
         android:name="io.novafoundation.nova.feature_dapp_impl.presentation.browser.extrinsicDetails.DappExtrinsicDetailsFragment"
         android:label="ExtrinsicDetailsFragment"
         tools:layout="@layout/fragment_dapp_extrinsic_details" />
+
+    <fragment
+        app:useAdd="true"
+        android:id="@+id/dappSearchFragment"
+        android:name="io.novafoundation.nova.feature_dapp_impl.presentation.search.DappSearchFragment"
+        android:label="DappSearchFragment"
+        tools:layout="@layout/fragment_search_dapp" />
 </navigation>
