--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -17,6 +17,11 @@
         <item name="android:letterSpacing">0.06</item>
     </style>
 
+    <style name="TextAppearance.NovaFoundation.SemiBold.Body">
+        <item name="android:textSize">17sp</item>
+        <item name="lineHeight">22sp</item>
+    </style>
+
     <!-- Bold -->
 
     <style name="TextAppearance.NovaFoundation.Bold" parent="TextAppearance.AppCompat.Title">
