--- a/feature-wallet-impl/src/main/res/layout/item_asset.xml
+++ b/feature-wallet-impl/src/main/res/layout/item_asset.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/itemAssetContainer"
     android:layout_width="match_parent"
-    android:layout_height="64dp"
-    android:layout_marginBottom="8dp"
+    android:layout_height="56dp"
     android:layout_weight="1"
+    android:background="@drawable/bg_primary_list_item"
     tools:background="@color/blurColor">
 
     <ImageView
@@ -46,7 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="8dp"
         android:textColor="@color/white"
         app:layout_constraintStart_toEndOf="@+id/itemAssetImage"
         app:layout_constraintTop_toTopOf="parent"
