--- a/feature-wallet-impl/src/main/res/layout/fragment_balance_list.xml
+++ b/feature-wallet-impl/src/main/res/layout/fragment_balance_list.xml
@@ -5,90 +5,27 @@
     android:id="@+id/walletContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:background="@drawable/drawable_background_image"
-    >
+    tools:background="@drawable/drawable_background_image">
 
-    <androidx.core.widget.NestedScrollView
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/balanceListAssets"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:clipToPadding="false"
+        android:overScrollMode="never"
+        android:paddingBottom="16dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/balanceListAssetTitle"
+        app:layout_constraintVertical_bias="0.0"
+        tools:itemCount="2"
+        tools:listitem="@layout/item_asset" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/balanceListContent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:context=".presentation.balance.list.BalanceListFragment">
-
-            <TextView
-                android:id="@+id/balanceListTotalTitle"
-                style="@style/TextAppearance.NovaFoundation.SemiBold.Title3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="20dp"
-                android:includeFontPadding="false"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="@tools:sample/full_names" />
-
-            <ImageView
-                android:id="@+id/balanceListAvatar"
-                android:layout_width="@dimen/avatar_size"
-                android:layout_height="@dimen/avatar_size"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="16dp"
-                android:src="@color/white"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <io.novafoundation.nova.feature_wallet_impl.presentation.balance.list.view.AssetsTotalBalanceView
-                android:id="@+id/balanceListTotalBalance"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/balanceListTotalTitle" />
-
-            <TextView
-                android:id="@+id/balanceListAssetTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="16dp"
-                app:layout_constraintTop_toBottomOf="@id/balanceListTotalBalance"
-                android:layout_marginTop="28dp"
-                style="@style/TextAppearance.NovaFoundation.SemiBold.Title3"
-                android:text="@string/wallet_assets" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/balanceListAssets"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="16dp"
-                android:clipToPadding="false"
-                android:overScrollMode="never"
-                android:paddingBottom="16dp"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/balanceListAssetTitle"
-                app:layout_constraintVertical_bias="0.0"
-                tools:itemCount="2"
-                tools:listitem="@layout/item_asset" />
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.5" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </androidx.core.widget.NestedScrollView>
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
