New asset grouping

--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -17,6 +17,12 @@
         <item name="android:letterSpacing">0.06</item>
     </style>
 
+    <style name="TextAppearance.NovaFoundation.SemiBold.Caps1">
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textSize">11sp</item>
+        <item name="android:letterSpacing">0.06</item>
+    </style>
+
     <style name="TextAppearance.NovaFoundation.SemiBold.Body">
         <item name="android:textSize">17sp</item>
         <item name="lineHeight">22sp</item>
