--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -219,6 +219,14 @@
             app:popExitAnim="@anim/fragment_close_exit"
             android:id="@+id/action_mainFragment_to_dappSearchGraph"
             app:destination="@id/dapp_search_graph" />
+
+        <action
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit"
+            android:id="@+id/action_mainFragment_to_assetFiltersFragment"
+            app:destination="@id/assetFiltersFragment" />
     </fragment>
 
 
@@ -903,4 +911,10 @@
     <include app:graph="@navigation/dapp_browser_graph" />
 
     <include app:graph="@navigation/dapp_search_graph" />
+
+
+    <fragment
+        android:id="@+id/assetFiltersFragment"
+        android:name="io.novafoundation.nova.feature_wallet_impl.presentation.balance.filters.AssetFiltersFragment"
+        android:label="AssetFiltersFragment" />
 </navigation>
